--- a/engine/static/css/main.css
+++ b/engine/static/css/main.css
@@ -1,28 +1,4 @@
-.products {
-    float: right;
-    width: 100%;
-}
-.product {
-    background-color: #fffff1;
-    margin: 20px;
-    position: relative;
-    width: 300px;
-    display: inline-block;
-    box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .05);
-    word-wrap: break-word;
-    background-clip: border-box;
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: .25rem;
-}
-.name {
-    font-size: 2em;
-}
-.img {
-    width: 100%;
-    height: 250px;
-}
-
-
+body,h1,h2,h3,h4,h5,h6 {font-family: "Oswald", sans-serif}
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -59,4 +35,9 @@
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+
+.sorted-label {
+    text-align: center;
 }
