--- a/engine/templates/engine/product.html
+++ b/engine/templates/engine/product.html
@@ -1,6 +1,6 @@
-{% if product.img %}<img class="img" src="{{ product.img }}" style="width:250px;height:250px">{% endif %}
-<div class="name">{{ product.category.name|upper }}: {{ product.name|title }}</div>
-<div class="description">Description: {{ product.description }}</div>
-<br>
-<div class="price">Price: {{ product.price }}</div>
-<div class="created_date">Created date: {{ product.created_date|timesince }} ago</div>
+{% if product.img %}<img src="{{ product.img }}" style="width:250px;height:250px">{% endif %}<br>
+<span class="w3-tag w3-blue">{{ product.category.name|upper }}</span> {{ product.name|title }}<br>
+Description: {{ product.description|truncatechars:300 }}<br>
+Price: {{ product.price }} $<br>
+Clicks: {{ clicks }}<br>
+Created date: {{ product.created_date|timesince }} ago<br>
