add json response for product detail

--- a/engine/templates/engine/base.html
+++ b/engine/templates/engine/base.html
@@ -48,7 +48,12 @@
 <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <div id="product-detail"></div>
+        <img id="modal-img" src="" style="width:250px;height:250px"><br>
+        <span class="w3-tag w3-blue"><p id="modal-category"></p></span> <p id="modal-name"></p><br>
+        Description: <p id="modal-description"></p><br>
+        Price: <p id="modal-price"></p> $<br>
+        Clicks: <p id="modal-clicks"></p><br>
+        Created date: <p id="modal-created-date"></p> ago<br>
     </div>
 </div>
 
