--- a/engine/templates/engine/base.html
+++ b/engine/templates/engine/base.html
@@ -48,12 +48,12 @@
 <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <img id="modal-img" src="" style="width:250px;height:250px"><br>
-        <span class="w3-tag w3-blue"><p id="modal-category"></p></span> <p id="modal-name"></p><br>
-        Description: <p id="modal-description"></p><br>
-        Price: <p id="modal-price"></p> $<br>
-        Clicks: <p id="modal-clicks"></p><br>
-        Created date: <p id="modal-created-date"></p> ago<br>
+        <img id="modal-img" src="" style="width:250px;height:250px;display: inline"><br><br>
+        <span class="w3-tag w3-blue"><p id="modal-category" style="display: inline"></p></span> <p id="modal-name" style="display: inline"></p><br>
+        Description: <p id="modal-description" style="display: inline"></p><br>
+        Price: <p id="modal-price" style="display: inline"></p> $<br>
+        Clicks: <p id="modal-clicks" style="display: inline"></p><br>
+        Created date: <p id="modal-created-date" style="display: inline"></p><br>
     </div>
 </div>
 
