--- a/engine/static/css/main.css
+++ b/engine/static/css/main.css
@@ -1,19 +1,18 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Oswald", sans-serif}
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content */
 .modal-content {
     background-color: #fefefe;
     margin: auto;
@@ -22,7 +21,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Oswald", sans-serif}
     width: 80%;
 }
 
-/* The Close Button */
 .close {
     color: #aaaaaa;
     float: right;
@@ -36,7 +34,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Oswald", sans-serif}
     text-decoration: none;
     cursor: pointer;
 }
-
 
 .sorted-label {
     text-align: center;
