--- a/engine/templates/engine/base.html
+++ b/engine/templates/engine/base.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TVs and Fridges</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:300,400,700">
-    <title>TVs and Fridges</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 <script>
@@ -37,7 +37,12 @@
     {% endif %}
 </div>
 
-{% if sorted %}<div class="sorted-label"><a href='?'>Now products sorted by {{ sorted|upper }} clicks. Click here for sort by date.</a></div>{% endif %}
+{% if sorted %}
+    <div class="sorted-label">
+        <a href='?'>Now products sorted by {{ sorted|upper }} clicks. Click here for sort by date.</a>
+    </div>
+{% endif %}
+
 <div class="w3-main w3-content w3-padding" style="max-width:1200px">
     <div class="w3-row-padding w3-padding-16 w3-center">
         {% block content %}
