--- a/engine/static/css/main.css
+++ b/engine/static/css/main.css
@@ -21,6 +21,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Oswald", sans-serif}
     width: 80%;
 }
 
+.modal-field {
+    display: inline
+}
+
 .close {
     color: #aaaaaa;
     float: right;
