--- a/engine/templates/engine/products.html
+++ b/engine/templates/engine/products.html
@@ -1,11 +1,36 @@
 {% extends "engine/base.html" %}
 
 {% block content %}
-    {% for product in products %}
-        <a class="w3-quarter" id="myBtn" onclick="get_product_details({{ product.pk }})" style="margin-top:100px">
-            <img src="{{ product.img }}" class="w3-border w3-border-blue w3-hover-border-green" alt="Sandwich" style="width:100%;height:272px">
-            <p><span class="w3-tag w3-blue">{{ product.category.name|upper }}</span> {{ product.price }} $</p>
-            <p class="w3-bottombar">{{ product.name|truncatechars:40|title }}</p>
-        </a>
-    {% endfor %}
+    <div class="label" style="text-align: center; margin-top: 50px">
+        <h1>
+            {% if category %}
+                All list of {{ category|upper }}s
+            {% else %}
+                TVs and Fridges
+            {% endif %}
+        </h1>
+        {% if category %}
+            <h3 class="margin">
+                Sort by <a href="?order_by_clicks=most">most</a> or <a href="?order_by_clicks=least">least</a> clicks
+            </h3>
+        {% endif %}
+    </div>
+
+    {% if sorted %}
+        <div class="sorted-label">
+            <a href='?'>Now products sorted by {{ sorted|upper }} clicks. Click here for sort by date.</a>
+        </div>
+    {% endif %}
+
+    <div class="w3-main w3-content w3-padding" style="max-width:1200px">
+        <div class="w3-row-padding w3-padding-16 w3-center">
+            {% for product in products %}
+                <a class="w3-quarter" id="myBtn" onclick="get_product_details({{ product.pk }})" style="margin-top:100px">
+                    <img src="{{ product.img }}" class="w3-border w3-border-blue w3-hover-border-green" alt="Sandwich" style="width:100%;height:272px">
+                    <p><span class="w3-tag w3-blue">{{ product.category.name|upper }}</span> {{ product.price }} $</p>
+                    <p class="w3-bottombar">{{ product.name|truncatechars:40|title }}</p>
+                </a>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
