--- a/engine/templates/engine/products.html
+++ b/engine/templates/engine/products.html
@@ -19,7 +19,7 @@
     {% if sorted %}
         <div class="sorted-label">
             <a href='{% url "products_list" category=category %}'>
-                Now products sorted by {{ sorted|upper }} clicks. Click here for sort by date.
+                Now products sorted by {% if sorted == "-clicks" %}MORE{% else %}LEAST{% endif %} clicks. Click here for sort by date.
             </a>
         </div>
     {% endif %}
