--- a/engine/templates/engine/products.html
+++ b/engine/templates/engine/products.html
@@ -27,7 +27,7 @@
     <div class="w3-main w3-content w3-padding" style="max-width:1200px">
         <div class="w3-row-padding w3-padding-16 w3-center">
             {% for product in products %}
-                <a class="w3-quarter" id="myBtn" onclick="get_product_details({{ product.pk }})" style="margin-top:100px">
+                <a class="w3-quarter" data-pk="{{ product.pk }}" style="margin-top:100px">
                     <img src="{{ product.img }}" class="w3-border w3-border-blue w3-hover-border-green" alt="Sandwich" style="width:100%;height:272px">
                     <p><span class="w3-tag w3-blue">{{ product.category.name|upper }}</span> {{ product.price }} $</p>
                     <p class="w3-bottombar">{{ product.name|truncatechars:40|title }}</p>
